# rust-shop

./: .env  .gitignore  AntPathMatcher.java  Cargo.toml  README.md  application-dev.yml  application.yml  auth_controller.rs  db.yml  jwt.yml  lib.rs.html -- source.html  log4rs.yaml  redis.yml  security.yml  wechat.yml
axum-route-master/: Cargo.toml  README.md
axum-route-master/src/: lib.rs
hyper-staticfile/.github/workflows/: check.yml
hyper-staticfile/examples/: doc_server.rs
hyper-staticfile/src/: lib.rs  resolve.rs  response_builder.rs  service.rs
hyper-staticfile/src/util/: file_bytes_stream.rs  file_response_builder.rs  mod.rs  open_with_metadata.rs  requested_path.rs
hyper-staticfile/tests/: hyper.rs  static.rs
miniprogram-2/: project.private.config.json
miniprogram-2/miniprogram/pages/index/: index.ts  index.wxml
rust-shop-core/: Cargo.toml
rust-shop-core/src/: ant_path_matcher.rs  app_config.rs  application_context.rs  body.rs  cache.rs  db.rs  db_pool_manager.rs  dispatcher.rs  entity.rs  extensions.rs  handler_interceptor.rs  id_generator.rs  jwt.rs  jwt_service.rs  lib.rs  macros.rs  memory_cache.rs  mode_and_view.rs  redis.rs  router.rs  security.rs  serde_utils.rs  session.rs  state.rs  wechat_service.rs
rust-shop-core/src/body/: mod.rs
rust-shop-core/src/db/: mod.rs  traits.rs
rust-shop-core/src/extract/: cookie.rs  extension.rs  form.rs  header.rs  json.rs  mod.rs  multipart.rs  path_variable.rs  query.rs  request_param.rs  request_state.rs
rust-shop-core/src/response/: append_headers.rs  into_response.rs  into_response_parts.rs  mod.rs  redirect.rs
rust-shop-db/: Cargo.toml
rust-shop-db/src/: lib.rs
rust-shop-macro/: Cargo.toml
rust-shop-macro/src/: lib.rs
rust-shop-miniprogram/: .eslintrc.js  project.config.json  project.private.config.json  tsconfig.json
rust-shop-miniprogram/miniprogram/: app.ts  app.wxss  project.config.json  project.private.config.json
rust-shop-miniprogram/miniprogram/pages/index/: index.js  index.ts  index.wxml  index.wxss
rust-shop-miniprogram/miniprogram/pages/logs/: logs.js  logs.ts  logs.wxml
rust-shop-miniprogram/typings/types/wx/: index.d.ts  lib.wx.api.d.ts  lib.wx.app.d.ts  lib.wx.behavior.d.ts  lib.wx.cloud.d.ts  lib.wx.component.d.ts  lib.wx.event.d.ts  lib.wx.page.d.ts
rust-shop-std/: Cargo.toml
rust-shop-std/src/: lib.rs
sql/: rust_shop.sql
src/: core.rs  extensions.rs  main.rs  rust_shop.rs  rust_shop_admin.rs  state.rs
src/api/: auth_controller.rs  demo_controller.rs  index_controller.rs  mod.rs  search_controller.rs  static_file_controller.rs  upload_controller.rs
src/api/admin/: category_controller.rs  mod.rs  product_controller.rs
src/api/shop/: demo_controller.rs  mod.rs  upload_controller.rs
src/config/: env_config.rs  load_config.rs  mod.rs
src/dto/: mod.rs
src/entity/: entity.rs  mod.rs
src/filter/: mod.rs
src/qo/: mod.rs
src/request/: login_request.rs  mod.rs  page_query_request.rs
src/service/: auth_service.rs  category_service.rs  jwt_service.rs  mod.rs  product_category_service.rs  product_service.rs  wechat_service.rs
src/utils/: db.rs  mod.rs
src/vo/: mod.rs
templates/: test.html
test_macro/: Cargo.toml
test_macro/src/: main.rs
validator/: Cargo.toml
validator/src/: lib.rs  types.rs
validator/src/validation/: email.rs  non_control_character.rs  urls.rs
validator_derive/src/: asserts.rs  lib.rs  lit.rs  quoting.rs  validation.rs
validator_types/src/: lib.rs
