[package]
name = "rust-shop-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
async-trait = "0.1"
route-recognizer = "0.3.1"
#json
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.13"
schemars = "0.8.10"
lazy_static = "1.4.0"
#form
form_urlencoded = "1.1.0"
#jwt
jsonwebtoken = "8.1.1"
#diesel = { version = "2.0.0", features = ["mysql"] }
#dotenvy = "0.15"
#文件上传解析
multer = "2.0.4"
uuid = { version = "1.1.2", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
#orm
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "postgres"] }
sqlx-crud = "0.3.2"
tokio = { version = "1.21.1", features = ["full"] }
log4rs = "1.1.1"
log = "0.4.17"
#日期
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.14"
criterion = "0.4.0"


rs-snowflake = "0.6.0"

anyhow = "1.0.65"
thiserror = "1.0.37"

ahash = "0.8.0"
validator = "0.16.0"
bcrypt = "0.13.0"
rust-shop-macro = { version = "0.1", path = "../rust-shop-macro" }
serde_html_form = "0.1.0"
mime = "0.3.16"
once_cell = "1.16.0"
http = "0.2.8"