[package]
name = "rust-shop-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "postgres"] }
anyhow = "1.0.65"
thiserror = "1.0.37"
lazy_static = "1.4.0"
rust-shop-core = { version = "0.1", path = "../rust-shop-core" }